<resources>
    <!-- Main App -->
    <string name="app_name">Challenge</string>
    <string name="btnCalculatorCTA">Open bar calculator</string>
    <string name="btnCameraCTA">Open Camera</string>
    <string name="btnMyViewAppCTA">Open My View App</string>
    <string name="btnHeroesAppCTA">Open Heroes App</string>
    <string name="btnMoviesCTA">Open Movies App</string>
    <string name="btnStudentCTA">Open Student App</string>

    <!-- Common String -->
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>

    <!-- Bar Volume Calculator -->
    <string name="calculatorTitle">Bar Volume Calculator</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="depth">Depth</string>
    <string name="calculate">Calculate</string>
    <string name="lengthHint">Input length value</string>
    <string name="widthHint">Input width value</string>
    <string name="depthHint">Input depth value</string>
    <string name="tvResultText">Result :</string>

    <!-- My View App -->
    <string name="imageCaption">sample image</string>
    <string name="price">$735</string>
    <string name="stock">Stock hanya 5 buah</string>
    <string name="phoneDescription">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google\'s London UK event in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google\'s long-standing Nexus series.</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="displayDescription">5.0 inches \nFHD AMOLED at 441ppi \n2.5D Corning Gorilla Glass 4</string>
    <string name="sizeDescription">5.6 x 2.7 x 0.2 ~ 0.3 inches \n143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="batteryDescription">2,770 mAh battery \nStandby time (LTE): up to 19 days \nTalk time (3G/WCDMA): up to 26 hours \nInternet use time (Wi-Fi): up to 13 hours \nInternet use time (LTE): up to 13 hours \nVideo playback: up to 13 hours \nAudio playback (via headset): up to 110 hours \nFast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="name">John Doe</string>
    <string name="iconCaption">image icon</string>
    <string name="avatarCaption">profile picture</string>
    <string name="btnBuy">Beli</string>
    <string name="totalPhotos">6 photos</string>

    <!-- Heroes App -->
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="heroes_detail">Detail Pahlawan</string>
    <string name="list">RV List</string>
    <string name="grid">RV Grid</string>
    <string name="cardView">RV CardView</string>
    <string name="listView">ListView</string>
    <string name="gridView">GridView</string>

    <!-- Movies App-->
    <string name="responseCode">Response Code</string>
    <string name="movies_title">Movie Title</string>
    <string name="release_date">12–01–2021</string>
    <string name="movies_overview">Movie Overview: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="vote_average">9.9</string>

    <!-- Student App -->
    <string name="student_id">ID</string>
    <string name="student_name">Name</string>
    <string name="student_gpa">GPA</string>
    <string name="student_gender">Gender</string>
    <string name="btn_add_student">Add new student</string>
    <string name="btn_save_student">Save new student</string>
    <string name="btn_update_student">Update student</string>
    <string name="btn_delete_all_students">Delete all</string>
    <string name="delete">delete</string>
    <string name="action">Action</string>
    <string name="img_poster">poster</string>

    <!-- Detail Screen -->
    <string name="detail_title">Detail Title</string>
    <string name="detail_release">Release</string>
    <string name="detail_description">Description</string>
</resources>