<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_item_id"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        tools:text="@string/student_id" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        tools:text="@string/student_name" />

    <TextView
        android:id="@+id/tv_item_gender"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="16sp"
        tools:text="@string/student_gender" />

    <TextView
        android:id="@+id/tv_item_detail"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="16sp"
        tools:text="@string/student_gpa" />

</LinearLayout>