<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/imageCaption"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/my_view_image" />

                <TextView
                    android:id="@+id/tvTotalPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical"
                    android:layout_margin="@dimen/defaultMargin"
                    android:background="#50000000"
                    android:fontFamily="@font/roboto"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/totalPhotos"
                    android:textColor="@color/white"
                    app:drawableLeftCompat="@drawable/ic_round_image_24" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvPrice"
                style="@style/myViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/price"
                android:textSize="@dimen/textH3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStock"
                style="@style/myViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/stock"
                android:textSize="@dimen/text_14_sp" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/myViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/phoneDescription"
                android:textSize="@dimen/text_18_sp" />

            <TextView
                android:id="@+id/tvSpecification"
                style="@style/myViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/specification"
                android:textSize="@dimen/text_14_sp" />

            <TableLayout
                android:id="@+id/tbSpecs"
                style="@style/myViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvDisplay"
                        android:layout_width="74dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/display"
                        android:textSize="@dimen/text_18_sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="187dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/displayDescription"
                        android:textSize="@dimen/text_18_sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/size"
                        android:textSize="@dimen/text_18_sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/sizeDescription"
                        android:textSize="@dimen/text_18_sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/battery"
                        android:textSize="@dimen/text_18_sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/batteryDescription"
                        android:textSize="@dimen/text_18_sp" />
                </TableRow>

            </TableLayout>

            <LinearLayout
                style="@style/myViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgMyViewUser"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/avatarCaption"
                    android:src="@drawable/bruno_mars"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tvMyViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/text_18_sp"
                    android:text="@string/name" />

            </LinearLayout>

            <Button
                android:id="@+id/btnMyView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/defaultMargin"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@string/btnBuy" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>