<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCalculatorCTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculatorCTA"
        app:layout_constraintBottom_toTopOf="@+id/btnCameraCTA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCameraCTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCameraCTA"
        app:layout_constraintBottom_toTopOf="@+id/btnMyViewAppCTA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculatorCTA" />

    <Button
        android:id="@+id/btnMyViewAppCTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMyViewAppCTA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCameraCTA" />

</androidx.constraintlayout.widget.ConstraintLayout>