<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.MovieDetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPoster"
        android:layout_width="165dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:baselineAligned="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/size_8_dp"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="165dp"
            android:layout_height="250dp"
            android:contentDescription="@string/img_poster"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_margin="3dp"
            android:src="@color/darkGreen" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_margin="6dp"
            android:src="@color/black" />

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="@dimen/size_20_dp"
            android:layout_height="@dimen/size_20_dp"
            android:layout_margin="@dimen/size_8_dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12_sp"
            tools:text="@string/vote_average" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPoster"
        tools:text="@string/detail_title" />

    <TextView
        android:id="@+id/tv_detail_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
        tools:text="@string/detail_release" />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_release"
        tools:text="@string/detail_description" />

</androidx.constraintlayout.widget.ConstraintLayout>