<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/size_8_dp"
    android:layout_marginTop="@dimen/size_4_dp"
    android:layout_marginRight="@dimen/size_8_dp"
    android:layout_marginBottom="@dimen/size_4_dp"
    card_view:cardCornerRadius="@dimen/size_4_dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:padding="@dimen/size_8_dp">

        <FrameLayout
            android:id="@+id/fl_item_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_16_dp">

            <ImageView
                android:id="@+id/img_item_poster"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_margin="3dp"
                android:src="@color/darkGreen" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_margin="6dp"
                android:src="@color/black" />

            <TextView
                android:id="@+id/tv_item_rating"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="@dimen/size_8_dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_12_sp"
                tools:text="@string/vote_average" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_5_dp"
            android:layout_marginEnd="@dimen/size_5_dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/fl_item_poster"
            android:textSize="@dimen/text_16_sp"
            android:textStyle="bold"
            tools:text="@string/movies_title" />

        <TextView
            android:id="@+id/tv_item_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_title"
            android:layout_marginStart="@dimen/size_5_dp"
            android:layout_marginEnd="@dimen/size_5_dp"
            android:layout_toEndOf="@id/fl_item_poster"
            android:maxLines="5"
            tools:text="@string/release_date" />

        <TextView
            android:id="@+id/tv_item_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/layout_button"
            android:layout_below="@id/tv_item_release"
            android:layout_marginStart="@dimen/size_5_dp"
            android:layout_marginTop="@dimen/size_5_dp"
            android:layout_marginEnd="@dimen/size_5_dp"
            android:layout_marginBottom="@dimen/size_5_dp"
            android:layout_toEndOf="@id/fl_item_poster"
            android:ellipsize="end"
            android:textSize="@dimen/text_12_sp"
            tools:text="@string/movies_overview" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/size_5_dp"
            android:layout_toEndOf="@id/fl_item_poster"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="@dimen/text_10_sp" />

            <Button
                android:id="@+id/btn_set_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="@dimen/text_10_sp" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>