<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="student"
            type="com.fadhil.challenge.domain.model.Student" />

        <variable
            name="selected"
            type="int" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.student.addedit.StudentAddEditFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_16_dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_student_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16_dp"
                android:hint="@string/student_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_student_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete|textCapWords"
                    android:singleLine="true"
                    android:text='@{(student.name == null || student.name == "") ? "" : student.name}' />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spn_student_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16_dp"
                android:hint="@string/student_gender"
                android:selectedItemPosition='@={selected}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_student_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_student_gpa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16_dp"
                android:hint="@string/student_gpa"
                app:layout_constraintBottom_toTopOf="@+id/btn_update_student"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spn_student_gender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_student_gpa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number|numberDecimal"
                    android:singleLine="true"
                    android:text='@{(student.gpa == 0F) ? "" : Float.toString(student.gpa)}' />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_update_student"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/btn_update_student"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_student_gpa" />

            <Button
                android:id="@+id/btn_save_student"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/btn_save_student"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_student_gpa" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
